@@ -1230,6 +1230,12 @@
     <ClCompile Include="..\..\debugger\gui\CartWF8Widget.cxx">
       <Filter>Source Files\debugger\gui</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\emucore\CartJANE.cxx">
+      <Filter>Source Files\emucore</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\debugger\gui\CartJANEWidget.cxx">
+      <Filter>Source Files\debugger\gui</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\emucore\AtariVox.hxx">
@@ -2489,13 +2495,16 @@
     <ClInclude Include="Windows.hxx">
       <Filter>Header Files\os</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\common\md5type.hxx">
-      <Filter>Header Files\common</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\emucore\CartWF8.hxx">
       <Filter>Header Files\emucore</Filter>
     </ClInclude>
     <ClInclude Include="..\..\debugger\gui\CartWF8Widget.hxx">
+      <Filter>Header Files\debugger\gui</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\emucore\CartJANE.hxx">
+      <Filter>Header Files\emucore</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\debugger\gui\CartJANEWidget.hxx">
       <Filter>Header Files\debugger\gui</Filter>
     </ClInclude>
   </ItemGroup>
